--- a/profkat-sample-webapp/src/main/resources/mycore.properties
+++ b/profkat-sample-webapp/src/main/resources/mycore.properties
@@ -2,7 +2,7 @@
 #MCR.datadir=/opt/profkat/data
 #MCR.basedir=/opt/profkat/projects/profkat-sample-webapp/target/profkat-sample
 #MCR.baseurl=http://localhost:8080/profkat-sample/
-#MCR.Module-solr.ServerURL=http://localhost:8080/solr/profkat
+#MCR.Module-solr.ServerURL=http://localhost:8080/solr/profkat-sample
 #log4j.rootLogger=INFO, stdout, R
 #log4j.logger.org.mycore.datamodel=ERROR, stdout, R
 #MCR.Mail.Server=email.meine-einrichtungk.de
@@ -12,8 +12,8 @@
 ## windows defaults
 MCR.datadir=C:/workspaces/profkat/data
 MCR.basedir=C:/workspaces/profkat/projects/profkat-sample-webapp/target/app/profkat-sample
-MCR.baseurl=http://localhost:8080/profkat/
-MCR.Module-solr.ServerURL=http://localhost:8980/solr/profkat
+MCR.baseurl=http://localhost:8080/profkat-sample/
+MCR.Module-solr.ServerURL=http://localhost:8980/solr/profkat-sample
 log4j.rootLogger=INFO, stdout, R
 log4j.logger.org.mycore.common.xml.MCRLayoutService=ERROR, stdout, R
 log4j.logger.httpclient.wire=ERROR, stdout, R
