PROKA-6 #comment pom.xml: rename group id of profkat-base-module
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@33935 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/pom.xml
+++ b/profkat-base-module/pom.xml
@@ -6,6 +6,7 @@
     <groupId>org.mycore</groupId>
     <version>2015.05.0.1-SNAPSHOT</version>
   </parent>
+  <groupId>org.mycore.profkat</groupId>
   <artifactId>profkat-base-module</artifactId>
   <packaging>jar</packaging>
   <name>Professorenkatalog Base</name>
