PROKA-6 #comment update eclipse configuration
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@33943 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-sample-webapp/profkat-sample-module/pom.xml
+++ b/profkat-sample-webapp/profkat-sample-module/pom.xml
@@ -11,23 +11,7 @@
   <name>Profkat Sample: Application Module</name>
   <description>Contains all files and classes for a Profkat MyCoRe Application</description>
   <build>
-    <resources>
-      <resource>
-        <filtering>true</filtering>
-        <directory>src/main/resources-filtered/</directory>
-        <includes>
-          <include>**/*</include>
-        </includes>
-      </resource>
-      <resource>
-        <filtering>false</filtering>
-        <directory>src/main/resources/</directory>
-        <includes>
-          <include>**/*</include>
-        </includes>
-      </resource>
-    </resources>
-    <plugins>
+  <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
@@ -64,6 +48,13 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
+    <dependency>
+      <groupId>postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>9.1-901.jdbc4</version>
+      <scope>runtime</scope>
+    </dependency>
+    
     <dependency>
       <groupId>org.mycore.profkat</groupId>
       <artifactId>profkat-base-module</artifactId>
