build.xml - repair solr index
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@33956 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-sample-webapp/build.xml
+++ b/profkat-sample-webapp/build.xml
@@ -99,6 +99,13 @@
 		</java>
 	</target>
 	
+	<target name="repair.solr.index" >
+		<java fork="true" dir="${CLI_HOME}/lib" classpathref="CLI_CLASSPATH" classname="org.mycore.frontend.cli.MCRCommandLineInterface">
+			<sysproperty key="MCR.AppName" value="${APP_NAME}"/>
+			<arg value="repair metadata search of type person" />
+		</java>
+	</target>
+	
 	<target name="update.solr.config">
 			<mkdir  dir="${SOLR_HOME_DIR}" />
 			<get src="${SOLR_DEFAULT_CONFIG_URL}" dest="${SOLR_HOME_DIR}/solr-default-config.zip" />
