enable preview in workspace
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@34139 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -83,7 +83,7 @@ MCR.URIResolver.Classification.Sort.profkat_class_professortypes=false
 MCR.URIResolver.Classification.Sort.profkat_class_institutions=false
 
 MCR.WorkflowEngine.Administrator.Email=profkatadmin@beispiel-uni.de
-MCR.WorkflowEngine.EditDirectory.person=%MCR.datadir%/export/person
+MCR.WorkflowEngine.EditDirectory.person=%MCR.datadir%/workspace/person
 MCR.WorkflowEngine.ManagerImpl.professorum=org.mycore.frontend.workflowengine.jbpm.professorum.MCRWorkflowManagerProfessorum
 MCR.WorkflowEngine.WorkflowTypes=professorum
 
