made sorting configurable use property MCR.Searchmask.{mask}.sortfields or MCR.Searchmask.default.sortfields
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@34164 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -9,6 +9,10 @@ MCR.CLI.Classes.Internal=org.mycore.user2.MCRUserCommands,org.mycore.frontend.cl
 #MCR.Searcher.NormalizeFieldsBeforeIndexing=false
 #MCR.EventHandler.MCRObject.4.Indexer=solr-metadata
 
+MCR.Searchmask.default.sortfields=
+MCR.Searchmask.profkat-bar.sortfields=profkat.idx_profname.headline,profkat.proftime_ivon,profkat.proftime_ibis,modified
+MCR.Searchmask.profkat-simple.sortfields=profkat.idx_profname.headline,profkat.proftime_ivon,profkat.proftime_ibis,modified
+MCR.Searchmask.profkat-extended.sortfields=profkat.idx_profname.headline,profkat.proftime_ivon,profkat.proftime_ibis,modified
 
 ##########################################
 # Search Result 
