PROKA-12 #comment update message keys and use props2options URI Resolver
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@34257 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -22,6 +22,25 @@ MCR.SearchResult.person.Datafields=profkat.lifetime,profkat.period,profkat.last_
 MCR.SearchResult.person.DefaultCoverfield=profkat.sex
 
 
+##################################################
+# Editor / Searchmask Configuration: Select boxes
+##################################################
+OMD.profkat.state=inprogress,long,short,document,other
+OMD.profkat.professorship_other=,x-chair,x-predec,x-succ
+OMD.profkat.sex=male,female,unknown
+OMD.profkat.family=,father,mother,other
+OMD.profkat.biographic=,school,studies,otherprofessorship
+OMD.profkat.academicdegree=,studies,promotion,promotion_bis1800,habilitation,habilitation_bis1934,other
+#CPHH: OMD.profkat.academicdegree=,studies,promotion,habilitation,habilitation_bis1934,other
+#CPB:  OMD.profkat.academicdegree=,studies,promotion,habilitation,other
+OMD.profkat.adminfunction=,rektor,dekan,direktor,prorektor,prodekan,stellvdirektor,other
+#CPB:  OMD.profkat.adminfunction=,direktor,rektor,prodrektor,praesident,vizepraesident,direktor_brh,direktor_ph,rektor_ph,dekan_ph,other
+OMD.profkat.otherfunction=,
+OMD.profkat.membership=,scientific,party
+OMD.profkat.award=,
+OMD.profkat.identifier=,gnd
+
+
 ##########################################
 # Index Browser 
 ##########################################
