disable sorting of classifications in searchmasks and editors
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@34991 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -49,6 +49,16 @@ MCR.IndexBrowser.profname.Facetfield=profkat.idx_profname.facet
 
 
 ##########################################
+# Classifications URI-Resolver 
+##########################################
+# sorting of classifications in searchmasks:
+MCR.URIResolver.Classification.Sort.profkat_class_epochs=false
+MCR.URIResolver.Classification.Sort.profkat_class_institutions=false
+MCR.URIResolver.Classification.Sort.profkat_class_persontypes=false
+MCR.URIResolver.Classification.Sort.profkat_class_proftypes=false
+MCR.URIResolver.Classification.Sort.profkat_class_subjects=false
+
+##########################################
 # Classifications Browser 
 ##########################################
 MCR.ClassBrowser.institution.Classification=profkat_class_institutions
