--- a/profkat-sample/profkat-sample-module/src/main/resources/mycore.properties
+++ b/profkat-sample/profkat-sample-module/src/main/resources/mycore.properties
@@ -10,7 +10,7 @@
 
 
 ## windows defaults
-MCR.datadir=C:/workspaces/profkat/data
+MCR.datadir=c:/workspaces/profkat/data
 MCR.basedir=C:/workspaces/profkat/projects/profkat-sample-webapp/target/app/profkat-sample
 MCR.baseurl=http://localhost:8080/profkat-sample/
 MCR.Module-solr.ServerURL=http://localhost:8980/solr/profkat-sample
