show "short term" for institution classification
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@35080 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -18,7 +18,7 @@ MCR.Searchmask.profkat-extended.sortfields=profkat.idx_profname.headline,profkat
 # Search Result 
 ##########################################
 MCR.SearchResult.person.Headerfield=profkat.idx_profname.headline
-MCR.SearchResult.person.Datafields=profkat.lifetime,profkat.period,profkat.last_professorship,profkat.last_faculty_class,profkat.state_msg
+MCR.SearchResult.person.Datafields=profkat.lifetime,profkat.period,profkat.last_professorship,profkat.last_faculty,profkat.state_msg
 MCR.SearchResult.person.DefaultCoverfield=profkat.sex
 
 
