PROKA-15 #comment use MyCoRe property "MCR.profkat.WBIS.user-ip.<WBIS-USER>=<IP-PATTERN> to generate proper WBIS-URLs
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@35340 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -1,6 +1,9 @@
 ##### Application specific properties
 MCR.CLI.Classes.Internal=org.mycore.user2.MCRUserCommands,org.mycore.frontend.cli.MCRClassification2Commands,org.mycore.frontend.cli.MCRObjectCommands,org.mycore.frontend.cli.MCRAccessCommands,org.mycore.frontend.cli.MCRDerivateCommands,org.mycore.backend.hibernate.MCRHIBCtrlCommands,org.mycore.access.mcrimpl.MCRAccessCtrlCommands
 
+MCR.profkat.WBIS.user-ip.ubrostock=139\\.30\\..*|127\\.0\\..*
+MCR.profkat.WBIS.user-ip.subunihh=134\\.100\\..*
+
 ## SOLR search configuration
 #MCR.Searcher.lucene-metadata.Index=
 #MCR.Searcher.solr-metadata.Index=metadata
