PROKA-15 #comment add TU Braunschweig to  property MCR.profkat.WBIS
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@35360 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -3,6 +3,7 @@ MCR.CLI.Classes.Internal=org.mycore.user2.MCRUserCommands,org.mycore.frontend.cl
 
 MCR.profkat.WBIS.user-ip.ubrostock=139\\.30\\..*|127\\.0\\..*
 MCR.profkat.WBIS.user-ip.subunihh=134\\.100\\..*
+MCR.profkat.WBIS.user-ip.tubraunschweig=134\\.169\\.20\\..* 
 
 ## SOLR search configuration
 #MCR.Searcher.lucene-metadata.Index=
