beautify person editor
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@35425 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -42,7 +42,7 @@ OMD.profkat.adminfunction=,rektor,dekan,direktor,prorektor,prodekan,stellvdirekt
 OMD.profkat.otherfunction=,
 OMD.profkat.membership=,scientific,party
 OMD.profkat.award=,
-OMD.profkat.identifier=,gnd
+OMD.profkat.identifier=,gnd,nognd
 
 
 ##########################################
