PROKA-17 #comment new field in datamodel and editor "partymember"
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@35479 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -40,7 +40,8 @@ OMD.profkat.academicdegree=,studies,promotion,promotion_bis1800,habilitation,hab
 OMD.profkat.adminfunction=,rektor,dekan,direktor,prorektor,prodekan,stellvdirektor,other
 #CPB:  OMD.profkat.adminfunction=,direktor,rektor,prodrektor,praesident,vizepraesident,direktor_brh,direktor_ph,rektor_ph,dekan_ph,other
 OMD.profkat.otherfunction=,
-OMD.profkat.membership=,scientific,party
+OMD.profkat.membership=,scientific
+OMD.profkat.partymember=,
 OMD.profkat.award=,
 OMD.profkat.identifier=,gnd,nognd
 
