PROKA-18 #comment add property
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@35481 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -51,7 +51,7 @@ OMD.profkat.identifier=,gnd,nognd
 ##########################################
 MCR.IndexBrowser.profname.Searchfield=profkat.idx_profname.headline
 MCR.IndexBrowser.profname.Facetfield=profkat.idx_profname.facet
-
+MCR.IndexBrowser.profname.FilterQuery=
 
 ##########################################
 # Classifications URI-Resolver 
