display academic title in search result
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@35531 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -22,7 +22,7 @@ MCR.Searchmask.profkat-extended.sortfields=profkat.idx_profname.headline,profkat
 # Search Result 
 ##########################################
 MCR.SearchResult.person.Headerfield=profkat.idx_profname.headline
-MCR.SearchResult.person.Datafields=profkat.lifetime,profkat.period,profkat.last_professorship,profkat.last_faculty,profkat.state_msg
+MCR.SearchResult.person.Datafields=profkat.academictitle,profkat.lifetime,profkat.period,profkat.last_professorship,profkat.last_faculty,profkat.state_msg
 MCR.SearchResult.person.DefaultCoverfield=profkat.sex
 
 
@@ -32,7 +32,7 @@ MCR.SearchResult.person.DefaultCoverfield=profkat.sex
 OMD.profkat.state=inprogress,long,short,document,other
 OMD.profkat.professorship_other=,x-chair,x-predec,x-succ
 OMD.profkat.sex=male,female,unknown
-OMD.profkat.family=,father,mother,other
+OMD.profkat.family=,father,mother,husband,wife,son,daughter,brother,sister,other
 OMD.profkat.biographic=,school,studies,otherprofessorship
 OMD.profkat.academicdegree=,studies,promotion,promotion_bis1800,habilitation,habilitation_bis1934,other
 #CPHH: OMD.profkat.academicdegree=,studies,promotion,habilitation,habilitation_bis1934,other
