--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -5,6 +5,8 @@ MCR.profkat.WBIS.user-ip.ubrostock=139\\.30\\..*|127\\.0\\..*
 MCR.profkat.WBIS.user-ip.subunihh=134\\.100\\..*
 MCR.profkat.WBIS.user-ip.tubraunschweig=134\\.169\\..* 
 
+MCRWorkflow.Email.Feedback.Subject=[Profkat Feedback] {0}
+
 ## SOLR search configuration
 #MCR.Searcher.lucene-metadata.Index=
 #MCR.Searcher.solr-metadata.Index=metadata
