--- a/profkat-sample/profkat-sample-webapp/pom.xml
+++ b/profkat-sample/profkat-sample-webapp/pom.xml
@@ -67,7 +67,7 @@
       <groupId>postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <version>9.1-901.jdbc4</version>
-      <scope>runtime</scope>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
