JDP-24 #comment add configuration for sorting classbrowser search results
git-svn-id: https://server.mycore.de/svn/professorenkatalog/trunk@36836 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
+++ b/profkat-base-module/src/main/resources/config/profkat-base/mycore.properties
@@ -76,6 +76,7 @@ MCR.ClassBrowser.institution.Filter=objectType:person
 MCR.ClassBrowser.institution.ShowUri=false
 MCR.ClassBrowser.institution.ShowDescription=true
 MCR.ClassBrowser.institution.ShowId=false
+MCR.ClassBrowser.institution.SortResult=profkat.idx_profname.headline%20asc
 
 MCR.ClassBrowser.subject.Classification=profkat_class_subjects
 MCR.ClassBrowser.subject.Count=true
@@ -85,6 +86,7 @@ MCR.ClassBrowser.subject.Filter=objectType:person
 MCR.ClassBrowser.subject.ShowDescription=true
 MCR.ClassBrowser.subject.ShowUri=false
 MCR.ClassBrowser.subject.ShowId=false
+MCR.ClassBrowser.subject.SortResult=profkat.idx_profname.headline%20asc
 
 MCR.ClassBrowser.epoch.Classification=profkat_class_epochs
 MCR.ClassBrowser.epoch.Count=true
@@ -94,7 +96,7 @@ MCR.ClassBrowser.epoch.Filter=objectType:person
 MCR.ClassBrowser.epoch.ShowDescription=true
 MCR.ClassBrowser.epoch.ShowUri=false
 MCR.ClassBrowser.epoch.ShowId=false
-
+MCR.ClassBrowser.epoch..SortResult=profkat.idx_profname.headline%20asc
 			
 ##########################################
 # OAI Data Provider
